# University_projects

./: .gitignore  README.md
semester 1/ASC/Lab 2/: ex1.lst  ex2.lst  ex3.lst  ex4.lst  ex5.asm
semester 1/ASC/Lab 3/: ex1.lst  ex2.asm  ex2.lst  ex3.asm  ex3.lst  ex4.asm  ex4.lst
semester 1/ASC/Lab 4/: ex.asm
semester 1/ASC/Lab 5/: ex.lst
semester 1/ASC/Lab 8/: ex.asm  ex.lst  ex_with_file.asm  ex_with_file.lst  file.txt
semester 1/ASC/asm + asm/: main.asm
semester 1/ASC/asm + c/: trans.asm
semester 1/ASC/test lab final/: input.txt  main.asm  main.lst  output.txt
semester 1/FP/Aplicatie Biblioteca/: main.py  readme.md  test.py  tests.py  white_box_testing.py
semester 1/FP/Complex numbers manager/: README.md  documentation.md  main.py  test.py
semester 2/AG - lab/BFSvDFS/: CMakeLists.txt  graph.txt  main.cpp
semester 2/AG - lab/Fleury's alg/: CMakeLists.txt  main.cpp
semester 2/AG - lab/Ford-Fulkerson/: CMakeLists.txt  main.cpp
semester 2/AG - lab/Preflow-Push/: CMakeLists.txt  main.cpp
semester 2/AG - lab/bellman-ford/: CMakeLists.txt  main.cpp
semester 2/AG - lab/dijkstra/: CMakeLists.txt  p1.cpp
semester 2/AG - lab/huffman decoding/: CMakeLists.txt  main.cpp
semester 2/AG - lab/huffman encoding/: CMakeLists.txt  main.cpp  out.txt
semester 2/AG - lab/johnsons alg/: CMakeLists.txt  p2.cpp
semester 2/AG - lab/kosaraju/: CMakeLists.txt  main.cpp
semester 2/AG - lab/lee/: CMakeLists.txt  main.cpp
semester 2/AG - lab/moore graph/: CMakeLists.txt  main.cpp
semester 2/AG - lab/prim - MST/: main.cpp  output.txt
semester 2/AG - lab/prufer decoding/: CMakeLists.txt  main.cpp
semester 2/AG - lab/prufer encoding/: CMakeLists.txt  main.cpp
semester 2/OOP/object_oriented_in_C/: .gitignore  CMakeLists.txt  main.c
semester 2/OOP/object_oriented_in_C/console/: console.c  console.h
semester 2/OOP/object_oriented_in_C/domain/: meds.c  meds.h  validator.c  validator.h
semester 2/OOP/object_oriented_in_C/repository/: repo.c  repo.h
semester 2/OOP/object_oriented_in_C/service/: service.c  service.h
semester 2/OOP/object_oriented_in_C/test/: test.c  test.h
semester 2/OOP/shop_store/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
semester 2/OOP/shop_store/Controller/: controller.cpp  controller.h
semester 2/OOP/shop_store/DinamicList/: list.hpp
semester 2/OOP/shop_store/Domain/: product.cpp  product.h  validator.cpp  validator.h
semester 2/OOP/shop_store/DynamicList/: list.hpp
semester 2/OOP/shop_store/Errors/: errors.hpp
semester 2/OOP/shop_store/Exports/: codrin.html  codrin.scv  codrin_test_1.html  readme_test.html  testGUIfile2.html  test_1.html  test_2.html  test_3.html  test_4.html  test_5.scv
semester 2/OOP/shop_store/GUI/: adminScreen.qss  controller.qss  guiController.cpp  guiController.h  listView.hpp  userScreen.qss  welcomeScreen.qss
semester 2/OOP/shop_store/GUI/Cos/: cos_curd_gui.hpp  cos_read_only_gui.hpp  observer.hpp
semester 2/OOP/shop_store/Repository/: repo.cpp  repo.h
semester 2/OOP/shop_store/Service/: service.cpp  service.h
semester 2/OOP/shop_store/ShoppingCart/: shoppingCart.cpp  shoppingCart.h
semester 2/OOP/shop_store/Tests/: test.txt  test_domain.cpp  test_list.cpp  test_reopFile.cpp  test_repo.cpp  test_service.cpp  test_serviceFile.cpp  test_shopping_cart.cpp  test_undo.cpp  tests.h
semester 2/OOP/shop_store/Ui/Console/: console.cpp  console.h
semester 2/OOP/shop_store/Ui/Controller/: controller.cpp  controller.h
semester 2/OOP/shop_store/Undo/: undo.hpp
semester 2/OOP/shop_store/Utilities/: productData.txt  template.html
semester 2/SD/: lab2.mw  test_lab.mw
semester 2/SD/Lab1/: first_part.mw  second_part.mw
semester 2/SD/Lab3/: ex1.mw  ex2.mw  ex3.mw  ex4.mw  ex5.mw
semester 2/SD/Lab4/: problema1.mw  problema2.mw  problema4.mw
semester 2/SD/Lab5/: prob1.mw  prob2.mw
semester 2/SD/Lab6/: prob1.mw  prob2.mw  prob3.mw  prob4.mw
semester 2/SD/simulare/: test1.mw  test2.mw
semester 2/SDA/: README.md
semester 2/SDA/TAD Coada cu Prioritati/: CMakeLists.txt
semester 2/SDA/TAD Colectie/: CMakeLists.txt
semester 2/SDA/TAD MultiDictionar Ordonat/: CMakeLists.txt
semester 2/SDA/TAD MultiDictionar Ordonat/Proiect C++/: IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h
semester 2/SDA/TAD MultiDictionar Ordonat/Teste/: TestExtins.cpp
semester 2/SDA/TAD Multime/: CMakeLists.txt
semester 3/CN/: proiect-lab.pkt
semester 3/DB/: TankInsertion.sql  TankQuery.sql  tables.sql
semester 3/DB/git - procedures/: git.sql  procedures_git.sql
semester 3/DB/refactor - procedures/: refactorQuery.sql  refactorV2_helpers.sql  refactorV2_p1.sql  refactorV2_p2.sql  refactorV2_p3.sql  refactorV2_p4.sql
semester 3/MAP/social-network/: .gitignore  build.gradle  console_format.txt
semester 3/Retele/: proiect-lab.pkt
semester 4/AI/: .gitignore
semester 4/AI/CV_parser_&_HR_assistant/: extracting_text.ipynb  testing_embeddings.ipynb
semester 4/AI/Code_Leet/: problem.py
semester 4/AI/DPPD-toBeRemoved/: dppd.ipynb
semester 4/AI/Lab1/: SimpleAlgorithms.ipynb
semester 4/AI/Lab10/: reinforcement_learning.ipynb
semester 4/AI/Lab11/: networks.ipynb  optimal_point_function.ipynb
semester 4/AI/Lab2/: prob1.ipynb  prob2.ipynb  prob3.ipynb  prob4.ipynb  regression_model.ipynb
semester 4/AI/Lab3/: pytesseractORC.ipynb
semester 4/AI/Lab5/: LRClass.py  regression_model.ipynb  regression_with_no_tools.ipynb
semester 4/AI/Lab6/: logistic_regression.ipynb  regression_model.ipynb
semester 4/AI/Lab7/: ANN.ipynb  ANN_noTool.py  dataset_maker.py  demos_and_theory.ipynb  noTool_ANN_CNN.ipynb
semester 4/AI/Lab8/: ANN_NLP.ipynb  ANN_NPL_noTool.ipynb  ANN_noTool.py  word_analysis.ipynb
semester 4/AI/Lab9/: LLM_fine-tuning.ipynb  LLM_parameters_influence.ipynb  questions.ipynb
semester 4/MAP/JFTS/: .gitignore  build.gradle  settings.gradle
semester 4/MPP/: TicketingSystem.db  exam_first_question.md
semester 4/MPP/C#FTS/: C#FTS.slnx
semester 4/MPP/JFTS/: README.md  build.gradle  settings.gradle
semester 4/MPP/SQL/: tables.sql
(+418 files in other folders)
